--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>avlyakulov.timur</groupId>
   <artifactId>TennisScoreboard</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>TennisScoreboard</name>
   <url>http://maven.apache.org</url>
@@ -17,6 +17,7 @@
     <lombok.version>1.18.24</lombok.version>
     <junit.version>5.10.1</junit.version>
     <mockito.version>5.8.0</mockito.version>
+    <jakarta.version>5.0.0</jakarta.version>
   </properties>
 
   <dependencies>
@@ -33,7 +34,6 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
-      <!-- область действия нашей зависимости -->
       <scope>test</scope>
     </dependency>
 
@@ -43,5 +43,15 @@
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>${jakarta.version}</version>
+      <!-- говорит то что для компиляции можно использовать но для веб архива не нужно -->
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
+
+
 </project>
