--- a/src/main/resources/h2.properties
+++ b/src/main/resources/h2.properties
@@ -5,5 +5,6 @@ hibernate.connection.username=sa
 
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
+hibernate.format_sql=
 hibernate.current_session_context_class = thread
 hibernate.hbm2ddl.auto=update
