--- a/src/main/resources/postgres.properties
+++ b/src/main/resources/postgres.properties
@@ -7,5 +7,9 @@ hibernate.connection.password = 1504
 #  hibernate
 hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql = true
+hibernate.format_sql=true
 hibernate.current_session_context_class = thread
 hibernate.hbm2ddl.auto=update
+#todo ??????????? ??? ??? ?????
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
