--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,11 @@
             <artifactId>HikariCP</artifactId>
             <version>5.1.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jsp-api</artifactId>
+            <version>10.1.18</version>
+        </dependency>
     </dependencies>
 
 
