--- a/src/main/resources/h2.properties
+++ b/src/main/resources/h2.properties
@@ -1,7 +1,6 @@
 hibernate.connection.driver_class=org.h2.Driver
-hibernate.connection.url=jdbc:h2:mem:tennis-scoreboard
+hibernate.connection.url=jdbc:h2:mem:tennis-scoreboard;INIT=RUNSCRIPT FROM 'classpath:create_table.sql'
 hibernate.connection.username=sa
-
 
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
