create view of matches with pagination

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Matches</servlet-name>
-        <url-pattern>/matches</url-pattern>
+        <url-pattern>/matches.jsp</url-pattern>
     </servlet-mapping>
 </web-app>
